@@ -104,8 +104,8 @@
                         <th>{% trans "Expenses (gross)" %}</th>
                         <th>{% trans "Income (net)" %}</th>
                         <th>{% trans "Income (gross)" %}</th>
-                        <th>{% trans "Balance (net)" %}</th>
-                        <th>{% trans "Balance (gross)" %}</th>
+                        <th>{% trans "Profit (net)" %}</th>
+                        <th>{% trans "Profit (gross)" %}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -140,7 +140,7 @@
                         <th>{% trans "Currency" %}</th>
                         <th>{% trans "Expenses (gross)" %}</th>
                         <th>{% trans "Income (gross)" %}</th>
-                        <th>{% trans "Balance (gross)" %}</th>
+                        <th>{% trans "Profit (gross)" %}</th>
                     </tr>
                 </thead>
                 <tbody>
